objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AccountCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActorId__c</fullName>
        <externalId>true</externalId>
        <label>Actor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthenticationOnThePortal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authentication on the portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIN_InsuranceOptIn__c</fullName>
        <description>Opt-in assurance prospect</description>
        <label>Insurance Opt-in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance 1</fullName>
                </value>
                <value>
                    <fullName>Insurance 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarDeliveryDate__c</fullName>
        <label>Car Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CarEngine__c</fullName>
        <description>Car Engine name</description>
        <label>Car Engine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engine 1</fullName>
                </value>
                <value>
                    <fullName>Engine 2</fullName>
                </value>
                <value>
                    <fullName>Engine 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarModel__c</fullName>
        <description>Car Model</description>
        <label>Car Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealershipName__c</fullName>
        <label>Dealership Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ITOrg__c</fullName>
        <label>IT Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ITOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OptInCollectionDate__c</fullName>
        <description>Date collecte opt-in assurance prospect</description>
        <label>Opt In Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OptInEmailCollectionDate__c</fullName>
        <label>Opt In Email Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptInEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In Email NL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInMailCollectionDate__c</fullName>
        <label>Opt In Mail Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptInMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInPhoneCollectionDate__c</fullName>
        <label>Opt In Phone Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptInPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInSMSCollectionDate__c</fullName>
        <label>Opt In SMS Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptInSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlateNumber__c</fullName>
        <label>Plate Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesmanIPN__c</fullName>
        <description>Salesman IPN</description>
        <label>Salesman IPN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubReason__c</fullName>
        <label>Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Excess</fullName>
                </value>
                <value>
                    <fullName>Liabilities to third parties</fullName>
                </value>
                <value>
                    <fullName>Exclusions</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnqualifyComments__c</fullName>
        <description>Open text field for agents to detail the unqualification if required.</description>
        <label>Unqualify Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleType__c</fullName>
        <label>Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UC</fullName>
                    <label>Used Car</label>
                </value>
                <value>
                    <fullName>NV</fullName>
                    <label>New Vehicle</label>
                </value>
                <value>
                    <fullName>NUC</fullName>
                    <label>Nearly Used Car</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>CIN_Lead_Process</fullName>
        <active>true</active>
        <businessProcess>CIN_Lead_Process</businessProcess>
        <description>Lead Process</description>
        <label>CIN Lead Process</label>
    </recordTypes>
</CustomObject>